--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,12 +42,12 @@ jobs:
 
     - name: Testing with Gradle
       run: make test
-    
+
     - name: Publish code coverage
       uses: paambaati/codeclimate-action@v5.0.0
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-        JACOCO_SOURCE_PATH: app/src/main/java
+        JACOCO_SOURCE_PATH: ${{github.workspace}}/src/main/java
       with:
         coverageCommand: make report
-        coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
+        coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
